# dynamic-closure

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt
benchmarks/include/: DyC_Benchmarks.h
benchmarks/src/: decrease-idempotent.c  generalized-floyd-warshall.c  increase-column.c  increase-row.c  run_benchmarks.c
dynamic-closure/: CMakeLists.txt
dynamic-closure/assets/: extended-min-plus-A.mtx  extended-min-plus-D.mtx  extended-min-plus-US-decrease.mtx  min-plus-A.mtx  min-plus-D.mtx  min-plus-S.mtx  min-plus-US-decrease.mtx  min-plus-US-increase.mtx
dynamic-closure/include/: DyC_Internal.h  DynamicClosure.h
dynamic-closure/src/algorithms/: DyC_DecreaseIdempotent.c  DyC_DistrustMatrix.c  DyC_GeneralizedFloydWarshall.c  DyC_IncreaseColumn.c  DyC_IncreaseRow.c
dynamic-closure/src/utilities/: DyC_Finalize.c  DyC_Init.c  DyC_Semiring.c
dynamic-closure/test/: decrease-idempotent-test.cc  distrust-matrix-test.cc  generalized-floyd-warshall-test.cc  increase-column-test.cc  increase-row-test.cc  semiring-test.cc
